--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "REDCapReportMatchResolver"
-version = "0.3.0"
+version = "0.3.1"
 description = "Assists with human expert review of possible patient matches."
 authors = [
     "Kevin J. Delaney <kjdelaney@ucsd.edu>",
@@ -48,6 +48,7 @@ mkdocs = "*"
 mkdocstrings = "*"
 mkdocs-material = "*"
 mypy = "*"
+openpyxl = "*"
 pandas = "*"
 pep8-naming = "*"
 pre-commit = "*"
