Correct package name.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "REDCapReportWriter"
+name = "REDCapMatchResolver"
 version = "0.0.1"
 description = "Produces a nicely-formatted text-only report suitable for email listing which patient matches need to be checked by the Clinical Research Coordinators (CRCs)."
 authors = [
@@ -8,9 +8,9 @@ authors = [
 license = "MIT"
 readme = "README.md"
 
-documentation = "https://github.com/DBMI/REDCapReportWriter"
-homepage = "https://github.com/DBMI/REDCapReportWriter"
-repository = "https://github.com/DBMI/REDCapReportWriter"
+documentation = "https://github.com/DBMI/REDCapMatchResolver"
+homepage = "https://github.com/DBMI/REDCapMatchResolver"
+repository = "https://github.com/DBMI/REDCapMatchResolver"
 
 classifiers = [
   "Development Status :: 4 - Beta",
@@ -26,7 +26,7 @@ classifiers = [
 ]
 
 packages = [
-    { include = "redcapreportwriter", from = "src" }
+    { include = "redcapmatchresolver", from = "src" }
 ]
 
 [tool.poetry.dependencies]
