--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,11 +80,10 @@ include = '\.pyi?$'
 
 [tool.pytest.ini_options]
 addopts = """\
-    --cov redcapreportwriter \
-    --cov tests \
     --cov-report term-missing \
     --no-cov-on-fail \
 """
+testpaths= ["redcapmatchresolver"]
 
 [tool.coverage.report]
 fail_under = 100
