--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ python = ">=3.7.1, <4.0"
 [tool.poetry.dev-dependencies]
 autoflake = "*"
 black = "*"
+data-science-types = "*"
 flake8 = "*"
 flake8-bugbear = "*"
 flake8-builtins = "*"
@@ -50,6 +51,7 @@ mkdocs-material = "*"
 mypy = "*"
 openpyxl = "*"
 pandas = "*"
+pandas-stubs = "*"
 pep8-naming = "*"
 pre-commit = "*"
 pymdown-extensions = "*"
@@ -92,7 +94,6 @@ exclude_lines = [
 ]
 
 [tool.mypy]
-disallow_any_unimported = true
 disallow_untyped_defs = true
 no_implicit_optional = true
 strict_equality = true
@@ -101,3 +102,5 @@ warn_redundant_casts = true
 warn_return_any = true
 check_untyped_defs = true
 show_error_codes = true
+ignore_missing_imports = true
+disable_error_code = ["call-arg", "call-overload", "var-annotated"]
