--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,7 +45,7 @@ repos:
         pass_filenames: false
       - id: flake8
         name: flake8
-        entry: poetry run flake8
+        entry: poetry run flake8 src/redcapmatchresolver
         language: system
         types: [python]
       - id: kacl-verify
