--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
+    files: src/redcapmatchresolver/*.py
     hooks:
       - id: check-ast
       - id: check-added-large-files
