--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
-    files: src/redcapmatchresolver/*.py
     hooks:
       - id: check-ast
       - id: check-added-large-files
@@ -12,23 +11,28 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: end-of-file-fixer
+        files: "py$"
       - id: trailing-whitespace
+        files: "py$"
       - id: mixed-line-ending
 -   repo: local
     hooks:
       - id: autoflake
         name: autoflake
         entry: poetry run autoflake -r --remove-all-unused-imports --remove-unused-variables src/redcapmatchresolver
+        files: "py$"
         language: system
         types: [ python ]
       - id: isort
         name: isort
         entry: poetry run isort src/redcapmatchresolver
+        files: "py$"
         language: system
         types: [python]
       - id: black
         name: black
         entry: poetry run black src/redcapmatchresolver
+        files: "py$"
         language: system
         types: [python]
       - id: pyupgrade
@@ -40,6 +44,7 @@ repos:
         name: mypy
         entry: poetry run mypy src/redcapmatchresolver
         require_serial: true
+        files: "py$"
         language: python
         additional_dependencies: ["mypy==0.812"]
         types: [python]
@@ -47,6 +52,8 @@ repos:
       - id: flake8
         name: flake8
         entry: poetry run flake8 src/redcapmatchresolver
+        exclude: "tests"
+        files: "py$"
         language: system
         types: [python]
       - id: kacl-verify
