--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "REDCapMatchResolver"
-version = "0.4.1"
+version = "0.5.0"
 description = "Assists with human expert review of possible patient matches."
 authors = [
     "Kevin J. Delaney <kjdelaney@ucsd.edu>",
@@ -31,6 +31,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.7.1, <4.0"
+importlib_resources = "*"
+pandas = "1.3.5"
 
 [tool.poetry.dev-dependencies]
 autoflake = "*"
@@ -66,6 +68,9 @@ sphinx_markdown_builder = "*"
 tryceratops = "*"
 typing = "*"
 wheel = "*"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
