--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "REDCapMatchResolver"
-version = "0.7.0"
+version = "0.7.2"
 description = "Assists with human expert review of possible patient matches."
 authors = [
     "Kevin J. Delaney <kjdelaney@ucsd.edu>",
@@ -21,6 +21,8 @@ classifiers = [
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Typing :: Typed",
 ]
@@ -31,8 +33,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.7.1, <4.0"
-pandas = "1.3.5"
+pandas = "2.0.0"
 tabulate = "^0.9.0"
+redcaputilities = {git = "https://github.com/DBMI/REDCapUtilities.git", rev="main"}
 
 [tool.poetry.dev-dependencies]
 autoflake = "*"
